Implement BitBucket API and Stripe billing integration (Phase 3)
- BitBucket: implement diff fetch, commits, comments, and file list
  via REST API with Basic Auth
- Stripe: implement checkout session, customer portal, webhook
  processing with signature verification
- Fix dangerous findAll().stream().filter() in subscription deletion
- Add stripe-java 26.1.0 dependency to pom.xml

Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>